--- a/frontend/src/components/header/header.css
+++ b/frontend/src/components/header/header.css
@@ -46,3 +46,33 @@
         display: block; 
     }
 }
+/* Width of the scrollbar */
+::-webkit-scrollbar {
+    width: 8px; /* Change width to desired value */
+    height: 8px; /* Change height for horizontal scrollbars */
+    border-radius: 30px;
+  }
+  
+  /* Track (background of scrollbar) */
+  ::-webkit-scrollbar-track {
+    background: transparent; /* Light background */
+  }
+  
+  /* Handle (the part you can grab and scroll) */
+  ::-webkit-scrollbar-thumb {
+    background-color: transparent; /* Darker handle */
+    border-radius: 30px; /* Rounded corners */
+  }
+  
+  /* Handle on hover */
+  ::-webkit-scrollbar-thumb:hover {
+    background-color: transparent; /* Darker handle when hovered */
+    border-radius: 30px;
+  }
+  
+  /* For Firefox */
+  * {
+    scrollbar-width: thin; /* Make scrollbar thin */
+    scrollbar-color: transparent transparent; /* thumb color and track color */
+  }
+  
