--- a/frontend/src/admin/Panel/admin.css
+++ b/frontend/src/admin/Panel/admin.css
@@ -28,6 +28,12 @@
         flex-direction: column;
         gap: 0px;
     }
+    .motherfucker{
+        overflow: auto;
+    }
+    #screen{
+        width: 100vw;
+    }
     body {
   overflow: hidden;
 }
@@ -59,6 +65,12 @@
         display: flex;
         flex-direction: column;
         gap: 0px;
+    }
+    .motherfucker{
+        overflow: auto;
+    }
+    #screen{
+        width: 100vw;
     }
     body {
   overflow: hidden;
