--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,7 +1,7 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
-html, body, #root {
+#root {
   margin: 0;
   padding: 0;
   width: 100%;
@@ -9,3 +9,18 @@ html, body, #root {
   overflow-x: hidden; 
 }
 
+body{
+  margin: 0;
+  padding: 0;
+  width: 100%;
+  height: 100%;
+  overflow-x: hidden;
+
+}
+html{
+  margin: 0;
+  padding: 0;
+  width: 100%;
+  height: 100%;
+  overflow-x: hidden;
+}
